<resources>
    <string name="app_name">ChatterBox</string>
    <string name="need_an_account">NEED A NEW ACCOUNT?</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT?</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="hi_there_now_i_m_using_chatterbox">Hi there now I\'m using Chatterbox</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="save_status">SAVE STATUS</string>
    <string name="share_your_status">Share your status</string>
    <string name="number_of_friends">Number of Friends</string>
    <string name="default_status">Default Status</string>
    <string name="send_a_request">Send a request</string>
    <string name="default_name">Default Name</string>
    <string name="decline_request">Decline request</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
</resources>
