<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="229dp"
        android:cursorVisible="false"
        android:text="@string/default_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="217dp" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/harlequine" />

    <Button
        android:id="@+id/send_req_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:background="#0392f8"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/send_a_request"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/decline_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/decline_request"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/profile_user_status"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="185dp"
        android:textAlignment="center"
        android:text="@string/default_status"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/number_of_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:text="@string/number_of_friends"
        android:textColor="#ffffff" />
</RelativeLayout>