<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.pmitev.chatterbox.activities.SettingsActivity">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/harlequine" />

    <Button
        android:id="@+id/settings_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_status_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/settings_image_button"
        android:layout_alignRight="@+id/settings_image_button"
        android:layout_below="@+id/settings_image_button"
        android:layout_marginTop="27dp"
        android:background="@color/colorAccent"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="@string/change_status"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <!-- Image Cropper fill the remaining available height -->
    <com.theartofdev.edmodo.cropper.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_image"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal"
        android:text="@string/display_name"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_status_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/hi_there_now_i_m_using_chatterbox"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>
